hphp/test/zend/good/tests/classes/autoload_015.php.skipif
<?hh extension_loaded('reflection') || die('skip');