hphp/test/zend/bad/ext/ldap/tests/bug48696.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifbindfailure.inc');
?>